[gd_scene load_steps=13 format=3 uid="uid://40w23d8la6q8"]

[ext_resource type="FontFile" uid="uid://cns7ermjdhfaq" path="res://Assets/ModernDOS8x8.ttf" id="1_31alk"]
[ext_resource type="Texture2D" uid="uid://dvyj80v2dars" path="res://Assets/caraneutra.png" id="2_3lw6o"]
[ext_resource type="Script" path="res://Scripts/computadora.gd" id="2_adpkp"]
[ext_resource type="Texture2D" uid="uid://cpxsd6bufknac" path="res://Assets/Personajes/Chen CH/cHINOP√çXELADO.png" id="2_dgbmv"]
[ext_resource type="Texture2D" uid="uid://sbxpmx7yfxar" path="res://Assets/Personajes/Ethan US/GRINGOPIXELADO.png" id="3_7odgk"]
[ext_resource type="Texture2D" uid="uid://qp0h5cxjeej8" path="res://Assets/plus-icon-256x256-3c64yjij.png" id="3_8i8vb"]
[ext_resource type="Texture2D" uid="uid://b0r8giahay4sh" path="res://Assets/5372211.png" id="4_8jori"]
[ext_resource type="Texture2D" uid="uid://ohbroamprk10" path="res://Assets/Personajes/Kim NKR/CHINO2PIXELADO.png" id="4_k240h"]
[ext_resource type="Texture2D" uid="uid://c6atyme3d8knd" path="res://Assets/Personajes/Dmitri RU/PIXELEADIDRIVSKY.png" id="5_k24p8"]
[ext_resource type="Texture2D" uid="uid://cyg7qt1r6b1p4" path="res://Assets/4989793.png" id="5_l8jxg"]
[ext_resource type="Texture2D" uid="uid://mm5h4vds8hxh" path="res://Assets/17834494.png" id="10_hjc6i"]

[sub_resource type="Theme" id="Theme_p1nwe"]
default_font = ExtResource("1_31alk")
default_font_size = 32

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_p1nwe")
script = ExtResource("2_adpkp")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.752941)
metadata/_edit_lock_ = true

[node name="EstatusChen" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 304.0
offset_top = 128.0
offset_right = 416.0
offset_bottom = 152.0
text = "Estatus
"

[node name="ColorRect" type="ColorRect" parent="ColorRect/EstatusChen"]
layout_mode = 0
offset_top = 32.0
offset_right = 112.0
offset_bottom = 136.0
color = Color(0.686275, 0.686275, 0.686275, 1)
metadata/_edit_lock_ = true

[node name="caraneutra" type="TextureRect" parent="ColorRect/EstatusChen/ColorRect"]
visible = false
layout_mode = 0
offset_left = 9.5
offset_top = 23.5
offset_right = 65.5
offset_bottom = 79.5
texture = ExtResource("2_3lw6o")
expand_mode = 4

[node name="plus2" type="TextureRect" parent="ColorRect/EstatusChen/ColorRect"]
self_modulate = Color(1, 1, 1, 0.121569)
layout_mode = 0
offset_left = 92.25
offset_top = 43.0
offset_right = 108.25
offset_bottom = 59.0
texture = ExtResource("3_8i8vb")
expand_mode = 4

[node name="plus1" type="TextureRect" parent="ColorRect/EstatusChen/ColorRect"]
self_modulate = Color(1, 1, 1, 0.121569)
layout_mode = 0
offset_left = 71.5
offset_top = 42.75
offset_right = 87.5
offset_bottom = 58.75
texture = ExtResource("3_8i8vb")
expand_mode = 4

[node name="carafeliz" type="TextureRect" parent="ColorRect/EstatusChen/ColorRect"]
visible = false
layout_mode = 0
offset_left = 9.5
offset_top = 23.5
offset_right = 65.5
offset_bottom = 79.5
texture = ExtResource("4_8jori")
expand_mode = 4

[node name="caratriste" type="TextureRect" parent="ColorRect/EstatusChen/ColorRect"]
layout_mode = 0
offset_left = 9.5
offset_top = 23.5
offset_right = 65.5
offset_bottom = 79.5
texture = ExtResource("5_l8jxg")
expand_mode = 4

[node name="EstatusDimitri" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 624.0
offset_top = 320.0
offset_right = 736.0
offset_bottom = 344.0
text = "Estatus
"

[node name="ColorRect" type="ColorRect" parent="ColorRect/EstatusDimitri"]
layout_mode = 0
offset_top = 32.0
offset_right = 112.0
offset_bottom = 136.0
color = Color(0.686275, 0.686275, 0.686275, 1)

[node name="plus1" type="TextureRect" parent="ColorRect/EstatusDimitri/ColorRect"]
self_modulate = Color(1, 1, 1, 0.121569)
layout_mode = 0
offset_left = 71.5
offset_top = 42.75
offset_right = 87.5
offset_bottom = 58.75
texture = ExtResource("3_8i8vb")
expand_mode = 4

[node name="plus2" type="TextureRect" parent="ColorRect/EstatusDimitri/ColorRect"]
self_modulate = Color(1, 1, 1, 0.121569)
layout_mode = 0
offset_left = 92.25
offset_top = 43.0
offset_right = 108.25
offset_bottom = 59.0
texture = ExtResource("3_8i8vb")
expand_mode = 4

[node name="caraneutra" type="TextureRect" parent="ColorRect/EstatusDimitri/ColorRect"]
visible = false
layout_mode = 0
offset_left = 9.5
offset_top = 23.5
offset_right = 65.5
offset_bottom = 79.5
texture = ExtResource("2_3lw6o")
expand_mode = 4

[node name="carafeliz" type="TextureRect" parent="ColorRect/EstatusDimitri/ColorRect"]
visible = false
layout_mode = 0
offset_left = 9.5
offset_top = 23.5
offset_right = 65.5
offset_bottom = 79.5
texture = ExtResource("4_8jori")
expand_mode = 4

[node name="caratriste" type="TextureRect" parent="ColorRect/EstatusDimitri/ColorRect"]
layout_mode = 0
offset_left = 9.5
offset_top = 23.5
offset_right = 65.5
offset_bottom = 79.5
texture = ExtResource("5_l8jxg")
expand_mode = 4

[node name="EstatusEthan" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 624.0
offset_top = 128.0
offset_right = 736.0
offset_bottom = 152.0
text = "Estatus
"

[node name="ColorRect" type="ColorRect" parent="ColorRect/EstatusEthan"]
layout_mode = 0
offset_top = 32.0
offset_right = 112.0
offset_bottom = 136.0
color = Color(0.686275, 0.686275, 0.686275, 1)

[node name="plus1" type="TextureRect" parent="ColorRect/EstatusEthan/ColorRect"]
self_modulate = Color(1, 1, 1, 0.121569)
layout_mode = 0
offset_left = 71.5
offset_top = 42.75
offset_right = 87.5
offset_bottom = 58.75
texture = ExtResource("3_8i8vb")
expand_mode = 4

[node name="plus2" type="TextureRect" parent="ColorRect/EstatusEthan/ColorRect"]
self_modulate = Color(1, 1, 1, 0.121569)
layout_mode = 0
offset_left = 92.25
offset_top = 43.0
offset_right = 108.25
offset_bottom = 59.0
texture = ExtResource("3_8i8vb")
expand_mode = 4

[node name="caraneutra" type="TextureRect" parent="ColorRect/EstatusEthan/ColorRect"]
visible = false
layout_mode = 0
offset_left = 9.5
offset_top = 23.5
offset_right = 65.5
offset_bottom = 79.5
texture = ExtResource("2_3lw6o")
expand_mode = 4

[node name="carafeliz" type="TextureRect" parent="ColorRect/EstatusEthan/ColorRect"]
visible = false
layout_mode = 0
offset_left = 9.5
offset_top = 23.5
offset_right = 65.5
offset_bottom = 79.5
texture = ExtResource("4_8jori")
expand_mode = 4

[node name="caratriste" type="TextureRect" parent="ColorRect/EstatusEthan/ColorRect"]
layout_mode = 0
offset_left = 9.5
offset_top = 23.5
offset_right = 65.5
offset_bottom = 79.5
texture = ExtResource("5_l8jxg")
expand_mode = 4

[node name="EstatusKim" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 304.0
offset_top = 320.0
offset_right = 416.0
offset_bottom = 344.0
text = "Estatus
"

[node name="ColorRect" type="ColorRect" parent="ColorRect/EstatusKim"]
layout_mode = 0
offset_top = 32.0
offset_right = 112.0
offset_bottom = 136.0
color = Color(0.686275, 0.686275, 0.686275, 1)

[node name="plus1" type="TextureRect" parent="ColorRect/EstatusKim/ColorRect"]
self_modulate = Color(1, 1, 1, 0.121569)
layout_mode = 0
offset_left = 71.5
offset_top = 42.75
offset_right = 87.5
offset_bottom = 58.75
texture = ExtResource("3_8i8vb")
expand_mode = 4

[node name="plus2" type="TextureRect" parent="ColorRect/EstatusKim/ColorRect"]
self_modulate = Color(1, 1, 1, 0.121569)
layout_mode = 0
offset_left = 92.25
offset_top = 43.0
offset_right = 108.25
offset_bottom = 59.0
texture = ExtResource("3_8i8vb")
expand_mode = 4

[node name="caraneutra" type="TextureRect" parent="ColorRect/EstatusKim/ColorRect"]
visible = false
layout_mode = 0
offset_left = 9.5
offset_top = 23.5
offset_right = 65.5
offset_bottom = 79.5
texture = ExtResource("2_3lw6o")
expand_mode = 4

[node name="carafeliz" type="TextureRect" parent="ColorRect/EstatusKim/ColorRect"]
visible = false
layout_mode = 0
offset_left = 9.5
offset_top = 23.5
offset_right = 65.5
offset_bottom = 79.5
texture = ExtResource("4_8jori")
expand_mode = 4

[node name="caratriste" type="TextureRect" parent="ColorRect/EstatusKim/ColorRect"]
layout_mode = 0
offset_left = 9.5
offset_top = 23.5
offset_right = 65.5
offset_bottom = 79.5
texture = ExtResource("5_l8jxg")
expand_mode = 4

[node name="CHENCH" type="TextureButton" parent="ColorRect"]
self_modulate = Color(0.360784, 0.564706, 0.298039, 1)
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 1152.0
offset_bottom = 1152.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("2_dgbmv")

[node name="ETHANUS" type="TextureButton" parent="ColorRect"]
self_modulate = Color(0.360784, 0.564706, 0.298039, 1)
layout_mode = 0
offset_left = 448.0
offset_top = 128.0
offset_right = 1472.0
offset_bottom = 1152.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("3_7odgk")

[node name="KIMKR" type="TextureButton" parent="ColorRect"]
self_modulate = Color(0.360784, 0.564706, 0.298039, 1)
layout_mode = 0
offset_left = 128.0
offset_top = 320.0
offset_right = 1152.0
offset_bottom = 1344.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("4_k240h")

[node name="DIMITRIRU" type="TextureButton" parent="ColorRect"]
self_modulate = Color(0.360784, 0.564706, 0.298039, 1)
layout_mode = 0
offset_left = 448.0
offset_top = 320.0
offset_right = 1472.0
offset_bottom = 1344.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("5_k24p8")

[node name="LlamandoKim" type="TextureRect" parent="ColorRect"]
visible = false
self_modulate = Color(0, 0.43, 0.0716666, 1)
layout_mode = 0
offset_left = 128.0
offset_top = 320.0
offset_right = 280.0
offset_bottom = 472.0
texture = ExtResource("10_hjc6i")
expand_mode = 4

[node name="LlamandoDimitri" type="TextureRect" parent="ColorRect"]
visible = false
self_modulate = Color(0, 0.431373, 0.0705882, 1)
layout_mode = 0
offset_left = 448.0
offset_top = 320.0
offset_right = 600.0
offset_bottom = 472.0
texture = ExtResource("10_hjc6i")
expand_mode = 4

[node name="LlamandoEthan" type="TextureRect" parent="ColorRect"]
visible = false
self_modulate = Color(0, 0.431373, 0.0705882, 1)
layout_mode = 0
offset_left = 448.0
offset_top = 128.0
offset_right = 600.0
offset_bottom = 280.0
texture = ExtResource("10_hjc6i")
expand_mode = 4

[node name="LlamandoChen" type="TextureRect" parent="ColorRect"]
visible = false
self_modulate = Color(0, 0.431373, 0.0705882, 1)
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 280.0
offset_bottom = 280.0
texture = ExtResource("10_hjc6i")
expand_mode = 4

[node name="lacomputadora" type="Label" parent="ColorRect"]
layout_mode = 0
offset_top = 22.0
offset_right = 576.0
offset_bottom = 38.0
scale = Vector2(2, 2)
text = "LA COMPUTADORA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btnRegresar" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 576.0
offset_right = 200.0
offset_bottom = 600.0
text = "<- Regresar
"

[node name="Estatus" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 808.0
offset_top = 128.0
offset_right = 1064.0
offset_bottom = 144.0
text = "ESTATUS GENERAL"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="ColorRect/Estatus"]
layout_mode = 0
offset_left = 25.0
offset_top = 40.0
offset_right = 228.0
offset_bottom = 231.0
color = Color(0.6875, 0.6875, 0.6875, 1)

[node name="caraneutra" type="TextureRect" parent="ColorRect/Estatus/ColorRect"]
visible = false
layout_mode = 0
offset_left = 40.0
offset_top = 32.0
offset_right = 168.0
offset_bottom = 160.0
texture = ExtResource("2_3lw6o")
expand_mode = 1

[node name="caratriste" type="TextureRect" parent="ColorRect/Estatus/ColorRect"]
layout_mode = 0
offset_left = 40.0
offset_top = 32.0
offset_right = 168.0
offset_bottom = 160.0
texture = ExtResource("5_l8jxg")
expand_mode = 1

[node name="carafeliz" type="TextureRect" parent="ColorRect/Estatus/ColorRect"]
visible = false
layout_mode = 0
offset_left = 40.0
offset_top = 32.0
offset_right = 168.0
offset_bottom = 160.0
texture = ExtResource("4_8jori")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/Estatus/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="btnAyudaGobernantes" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 832.0
offset_top = 552.0
offset_right = 1144.0
offset_bottom = 576.0
text = "! Ayuda Gobernantes"

[node name="btnAyudaComputadora" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 832.0
offset_top = 584.0
offset_right = 1144.0
offset_bottom = 608.0
text = "? Ayuda Computadora"
